fix CSS to align content to the center of the screen

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -175,3 +175,21 @@ display:block;
     font-size:larger;
 
 }
+
+
+#StartSection, #questionSection, #AllDoneSection{
+    position: fixed;
+    left: 20%;
+    right: 20%;
+
+}
+
+
+#textbox{
+
+    border-radius: 6px;
+    border: 2px solid purple;
+    padding: 12px 20px;
+    box-sizing: border-box;
+
+}
